# FAASTR

./: .gitignore  .gitmodules  Cargo.toml  Makefile
bootloader/x86_64/: disk.asm  startup-common.asm  startup-x86_64.asm
doc/: context.txt  from_redox.txt  required.txt  signals.txt  syscall.txt
ivshrpcd/: Cargo.toml
ivshrpcd/ivshrpc/: Cargo.toml
ivshrpcd/ivshrpc/src/: lib.rs
ivshrpcd/src/: main.rs
kernel/: Cargo.toml  Xargo.toml  build.rs
kernel/slab_allocator/src/: lib.rs  slab.rs  test.rs
kernel/src/: consts.rs  elf.rs  error.rs  event.rs  externs.rs  lib.rs  panic.rs  time.rs
kernel/src/acpi/: fadt.rs  hpet.rs  madt.rs  mod.rs  rsdp.rs  rsdt.rs  rxsdt.rs  sdt.rs  xsdt.rs
kernel/src/allocator/: linked_list.rs  mod.rs
kernel/src/common/: int_like.rs
kernel/src/context/: call.rs  context.rs  event.rs  list.rs  load.rs  memory.rs  mod.rs  module.rs  signal.rs  switch.rs  timeout.rs
kernel/src/devices/: ivshmem.rs  mod.rs  uart_16550.rs
kernel/src/memory/: bump.rs  mod.rs  recycle.rs  valloc.rs
kernel/src/scheme/: debug.rs  env.rs  event.rs  irq.rs  (+7 more)
kernel/targets/: x86_64-unknown-none.json
libc/: .gitignore  Makefile  README.md  db.c  runtime.c  sos.c  string.c
libc/include/: alloca.h  ctype.h  db.h  runtime.h  sos.h  string.h  time.h
mk/: config.mk  disk.mk  kernel.mk  qemu.mk  tests.mk  tools.mk
ringbuf/: Cargo.toml
ringbuf/src/: lib.rs
sos-rs/: Cargo.toml
sos-rs/benches/: sos.rs
sos-rs/fuzz/: Cargo.toml
sos-rs/src/: lib.rs
sos-rs/tests/: test.rs
symbind/: compiler.go
test/: call.c  exit.c  rio.rs  test.manifest.json
(+81 files in other folders)
