[package]
name = "ivshrpcd"
version = "0.1.0"
authors = ["Denis Lavrov <bahus.vel@gmail.com>"]
autobins = false

[[bin]]
name="ivshrpcd"
path="src/bin/main.rs"

[dependencies]
memmap = {version="0.7.0"}
ringbuf = { path = "../ringbuf" }
sos = { path = "../sos-rs",  features = ["alloc"] }
lazy_static = { version="1.1.0" }
fnv = {version="1.0.6" }
byteorder = { version = "1.1.0", default-features=false }
either = { version = "1.5.0", default-features=false }
nix = {version="0.11.0"}
ivshrpc = {path = "./ivshrpc"}